kubernetes/apps/minecraft/survival/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: survival-map
spec:
  hostnames: ["map.ok8.sh"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: survival
          port: 8100
      matches:
        - path:
            type: PathPrefix
            value: /maps/survival
